create normals if no exist #

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 slider.step = '0.1';
                 slider.title = 'light';
                 selector.appendChild(slider);
-                slider.value = Math.PI/2;
+                slider.value = 0;
 
                 const envname = localStorage.getItem('env') || 'env';
                 {
@@ -115,13 +115,21 @@
 
                 //https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/
                 window.renderer = new redcube.RedCube(
-                    'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf', 
+                    'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf',
                     canvas, 
                     [localStorage.getItem('ssao'), localStorage.getItem('bloom'), localStorage.getItem('shadow'), localStorage.getItem('light')].filter(name => name),
                     envname,
                     mode
                 );
                 renderer.init(() => {
+                    if (name === 'Sponza') {
+                        renderer.camera.setZ(7);
+                        renderer.light.setZ(7);
+                        renderer.renderer.reflow = true;
+                        renderer.renderer.needUpdateView = true;
+                        renderer.renderer.needUpdateProjection = true;
+                        renderer.camera.updateNF();
+                    }
                     if (renderer.parse.cameras.length) {
                         const select = document.createElement('select');
                         select.onchange = () => {
