webpack auto detect current script

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf',
                     canvas, 
                     [],
-                    envname,
+                    'src/images/env.hdr',
                     mode
                 );
                 renderer.init(() => {
