webgpu backend implementation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <canvas id="canvas"></canvas>
         <div id="selector"></div>
     </div>
-    <script src="./dist/redcube.js"></script>
+    <script src="./dist/redcube.webgpu.js"></script>
     <script>
         fetch('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/model-index.json')
             .then(r => r.json())
