--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             left: 0;
         }
     </style>
+    <script>
+        const url = new URL(location);
+        if (url.searchParams.get('webgpu')) {
+            document.write('<script src="./dist/redcube.webgpu.js"><\/script>');
+        } else {
+            document.write('<script src="./dist/redcube.js"><\/script>');
+        }
+    </script>
 </head>
 
 <body>
@@ -33,7 +41,6 @@
         <canvas id="canvas"></canvas>
         <div id="selector"></div>
     </div>
-    <script src="./dist/redcube.webgpu.js"></script>
     <script>
         fetch('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/model-index.json')
             .then(r => r.json())
