fix specular lobe, fix ibl position, add KHR_materials_emissive_strength and KHR_materials_iridescence

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf',
                     canvas, 
                     [],
-                    'src/images/env.hdr',
+                    `src/images/${localStorage.getItem('env') || 'env4'}.hdr`,
                     mode
                 );
                 renderer.init(() => {
