reduce gpu objects amount

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             if (!navigator.gpu) {
                 document.write('<h1>WebGPU is not supported on your platform so far.</h1>');
             }
-            document.write('<script src="./dist/redcube.webgpu.js"><\/script>');
+            document.write('<script src="./redcube.webgpu.js"><\/script>');
         } else {
             document.write('<script src="./dist/redcube.js"><\/script>');
         }
