reduce webgl objects amount

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             }
             document.write('<script src="./redcube.webgpu.js"><\/script>');
         } else {
-            document.write('<script src="./dist/redcube.js"><\/script>');
+            document.write('<script src="./redcube.js"><\/script>');
         }
     </script>
 </head>
